@@ -39,7 +39,7 @@ struct event_base;
 
 struct evhttp_connection {
 	/* we use tailq only if they were created for an http server */
-	TAILQ_ENTRY(evhttp_connection) next;
+	TAILQ_ENTRY(evhttp_connection) (next);
 
 	int fd;
 	struct event ev;
@@ -47,7 +47,9 @@ struct evhttp_connection {
 	struct evbuffer *input_buffer;
 	struct evbuffer *output_buffer;
 	
-	char *address;
+	char *bind_address;		/* address to use for binding the src */
+
+	char *address;			/* address to connect to */
 	u_short port;
 
 	int flags;
@@ -66,7 +68,7 @@ struct evhttp_connection {
 
 	TAILQ_HEAD(evcon_requestq, evhttp_request) requests;
 	
-	void (*cb)(struct evhttp_connection *, void *);
+						   void (*cb)(struct evhttp_connection *, void *);
 	void *cb_arg;
 	
 	void (*closecb)(struct evhttp_connection *, void *);
